--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-*{margin: 0;
+*{
+    margin: 0;
     padding: 0;
     box-sizing: border-box
 }
@@ -115,4 +116,7 @@ footer{
     background-color: blue;
     color: white;
     padding: 16px;
+}
+.custom a{
+    background-color: orange;
 }
